# ndi-bridge

./: .gitattributes  .gitignore  2025-09-08-this-session-is-being-continued-from-a-previous-co.txt  2025-09-09-please-do-deep-study-of-this-branch-and-status-of.txt  AGENTS.md  BUILD.md  BUILD_STATE_v1.7.3.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  DANTE_CLOCK_ARCHITECTURE.md  DANTE_IMPLEMENTATION.md  DANTE_INTERCOM_COEXISTENCE.md  DEPLOYMENT-SUMMARY-v2.4.2.md  FINAL_MERGE_SUMMARY.md  GOAL_11_REFACTORING.md  LICENSE  MERGE_PREPARATION.md  MERGE_SUMMARY.md  MIGRATION_STATUS.md  MOUNT_POINT_MIGRATION.md  PTP_CONFLICT_RESOLUTION.md  README.md  SESSION_CONTEXT.md  THREAD_PROGRESS.md  TODO.md  WORKAROUND.md  build-image-for-rufus.sh  build-usb-with-log.sh  build.sh  circular-dependency-analysis.md  complete-failed-tests.txt  complete_test_run.txt  deploy-image-to-device.sh  deploy-services.sh  deploy-to-box.sh  diagnose-capture.sh  failed-tests-110.txt  (+23 more)
docs/: BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  INTERCOM.md  ISSUE_34_114_FIX_SUMMARY.md  LINUX_LATENCY_INVESTIGATION.md  PIPEWIRE.md  PIPEWIRE_ARCHITECTURE.md  TESTING.md  TEST_INFRASTRUCTURE_REQUIREMENTS.md  TIME-SYNC-IMPLEMENTATION.md  UBUNTU_N100_TEST_SETUP.md  USB-BUILD.md  VIRTUAL_DEVICE_TEST_RESULTS.md  architecture.md  decklink-sdk-setup.md  decklink-setup.md  feature-comparison.md  ndi-sdk-setup.md
docs/architecture/: capture-devices.md
docs/reference/: decklink-ndi-reference.cpp  generate-decklink-api.bat  media-foundation-ndi-reference.cpp
files/nginx/: media-bridge-intercom  ndi-bridge  ndi-bridge-enhanced  ndi-bridge-intercom
files/systemd/: media-bridge-fix-mac.service
files/tmpfiles.d/: media-bridge-network.conf
include/capture/: DeckLinkCaptureCallback.h  DeckLinkDeviceInitializer.h  DeckLinkFormatManager.h  DeckLinkFrameQueue.h  DeckLinkStatistics.h
include/common/: version.h
scripts/: BUILD_SCRIPTS_SAFETY.md  BUILD_VERSION_RULES.md  FEATURE_COMPARISON_ANALYSIS.md  MISSING_FEATURES_SUMMARY.md  MODULAR_FIXES.md  REFACTORING_FIXES_v1.3.1.md  build-ndi-usb-linux-final.sh  build-ndi-usb-linux-safe-test.sh  build-ndi-usb-linux-test.sh  build-ndi-usb-linux.sh  build-ndi-usb-modular.sh  compile-inferno.sh  fix-usb-issues.sh  generate-decklink-api.bat  ndi-bridge-set-device-name  quick-deploy-intercom.sh  setup-ndi-sdk.bat  test-dante-discovery.sh
scripts/build-modules/: 00-variables.sh  01-functions.sh  01a-cleanup.sh  02-prerequisites.sh  03-partition.sh  04-mount.sh  05-debootstrap.sh  06-system-config.sh  07-base-setup.sh  08-network.sh  08a-pipewire-upgrade.sh  09-ndi-capture-service.sh  09-ndi-service.sh  09a-intercom-chrome.sh  09a-ndi-display-service.sh  09b-intercom-service.sh  10-ndi-display-service.sh  10-tty-config.sh  10a-pipewire-user-session.sh  11-filesystem.sh  11-intercom-chrome.sh  12-helper-scripts.sh  12-time-sync.sh  12-tty-config.sh  13-filesystem.sh  13-helper-scripts-inline.sh  14-helper-scripts.sh  14-power-resistance.sh  15-time-sync.sh  15-web-interface.sh  16-power-resistance.sh  17-web-interface.sh  18-dante-audio.sh  BOOT_FIX_NOTES.md
scripts/config/: display-policy.conf
scripts/deployment/: full-filesystem-sync.sh
scripts/helper-scripts/: 50-audio-group-access.conf  50-chrome-isolation.conf  50-chrome-usb-audio.lua  50-usb-audio.conf  99-mediabridge-limits.conf  chrome-audio-enforcer  chrome-audio-loopback.conf  chrome-device-filter.sh  dante-advertiser  dante-avahi.service  dante-bridge-production  dante-bridge.service  generate-bridge-mac  install-chrome-intercom-deps.sh  intercom.conf  load-alsa-devices.sh  media-bridge-audio-cleanup  media-bridge-audio-manager  media-bridge-audio-manager-fixed  media-bridge-audio-manager.service  media-bridge-audio-proxy  media-bridge-audio-watchdog  media-bridge-audio-watchdog.service  media-bridge-chrome-wrapper  media-bridge-collector  media-bridge-dante  media-bridge-dante-logs  media-bridge-dante-pipewire  media-bridge-dante-production  media-bridge-dante-simple  media-bridge-dante.service  media-bridge-fix-mac  media-bridge-help  media-bridge-info  media-bridge-intercom-config  media-bridge-intercom-control  media-bridge-intercom-fixed  media-bridge-intercom-launcher  media-bridge-intercom-launcher-isolated  media-bridge-intercom-logs  (+93 more)
scripts/systemd/: ndi-display.service  ndi-display@.service
src/: main.cpp
src/capture/: BasicFormatConverter.cpp  DeckLinkCaptureCallback.cpp  DeckLinkCaptureDevice.cpp  DeckLinkCaptureDevice.h  DeckLinkDeviceEnumerator.cpp  DeckLinkDeviceEnumerator.h  DeckLinkDeviceInitializer.cpp  DeckLinkFormatManager.cpp  DeckLinkFrameQueue.cpp  DeckLinkStatistics.cpp  FormatConverterFactory.h  ICaptureDevice.h  IFormatConverter.h
src/common/: app_controller.cpp  app_controller.h  capture_interface.h  frame_queue.cpp  frame_queue.h  logger.cpp  logger.h  ndi_sender.cpp  ndi_sender.h  pipeline_thread_pool.cpp  pipeline_thread_pool.h  version.h
src/display/: alsa_audio_output.cpp  alsa_audio_output.h  audio_output.h  audio_output_factory.cpp  audio_processor.cpp  audio_processor.h  display_output.cpp  display_output.h  drm_display_output.cpp  drm_display_output.h  main.cpp  ndi_manager.h  ndi_receiver.cpp  ndi_receiver.h  pipewire_audio_output.cpp  pipewire_audio_output.h  status_reporter.h  stream_manager.cpp  stream_manager.h
src/linux/: main_test.cpp
tests/: .env.example  README.md  TESTING_ARCHITECTURE.md  TEST_VERIFICATION.md  conftest.py  pytest.ini  pytest.ini.bak  quick-test.sh  requirements.txt  run_all_tests.sh  run_comprehensive.sh  run_test.py  run_tests.sh  test-deployment-quick.sh  test-device.sh  test-report.html  test_all_tests_included.py  test_comprehensive_system.sh  test_config.yaml  test_config.yaml.example  test_dante_audio.sh  test_dante_comprehensive.sh  test_dante_sample_rate.sh  test_dante_simple.sh  test_mac_persistence.sh  test_vdo_intercom.sh
web/: index-enhanced.html  intercom-defaults.conf  intercom.html  media-bridge-intercom-web.service  ndi-bridge-intercom-web.service  start-intercom-web.sh
(+148 files in other folders)
